--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ author:
     - name: facebook
       url:
     - name: github
-      url: https://github.com/yizeng/jekyll-theme-simple-texture
+      url: https://github.com/petterobam
     - name: instagram
       url:
     - name: linkedin
