--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ sass:
 # Site Data
 url: # the base hostname & protocol for your site, e.g. http://example.com
 baseurl: # the subpath of your site, e.g. /blog
-title: petterobam blog
+title: PetterObam Blog
 description: "个人GitHub博客."
 keywords: 'java,IT,技术,blog'
 author:
