添加github issue博客评论支持

--- a/_config.yml
+++ b/_config.yml
@@ -62,6 +62,12 @@ disqus:
 google_analytics: # e.g. 'UA-42456515-5'
 addthis_public_id: # AddThis sharing plugin. See http://www.addthis.com/. E.g. ra-53329e27694534j5 
 
+gitment:
+  owner: petterobam
+  repo: my-blog
+  oauth_client_id: 7d522d338b8d88e40446
+  oauth_client_secret: be5aca84a4c6640f52c48ec546717bcdf297914f
+
 paths:
   home: /
   blog: /blog/
