添加我的阅读和我的学习笔记栏目

--- a/_config.yml
+++ b/_config.yml
@@ -77,3 +77,5 @@ paths:
   blog: /blog/
   categories: /blog/categories/
   tags: /blog/tags/
+  my_reader: /reader/index.html
+  my_learner: /learner/index.html
