--- a/learner/install-index/config/config.yml
+++ b/learner/install-index/config/config.yml
@@ -2,8 +2,8 @@ page:
   title: 我的学习笔记
   inc: 2018 petterObam
   useArgsPathForJar: false  # 如果设置该配置false，jar文件将完全按照配置文件执行，此时mdBasePath、tplPath、indexPath必填
-  mdBasePath:  D:\MyWorkspace\MyGit\jekyll\my-blog\learner\  # markdown文件的目录，默认为 classpath:markdowns/
-  tplPath: D:\MyWorkspace\MyGit\jekyll\my-blog\learner\install-index\template\index.html   # index模板文件的路径，默认为 classpath:template/index.html
+  mdBasePath:  /Users/ouyangjie/WorkSpace/other/blog/learner/  # markdown文件的目录，默认为 classpath:markdowns/
+  tplPath: /Users/ouyangjie/WorkSpace/other/blog/learner/install-index/template/index.html   # index模板文件的路径，默认为 classpath:template/index.html
   markdowns:
     - Github博客部署学习笔记.md
     - JVM内存溢出、泄露检查工具学习笔记.md
@@ -14,4 +14,4 @@ page:
     - grunt学习笔记.md
     - Docker学习笔记.md
     - 3DMax学习笔记.md
-  indexPath: D:\MyWorkspace\MyGit\jekyll\my-blog\learner\index.html # 生成的index文件输出路径，默认 classpath:output/index.html
+  indexPath: /Users/ouyangjie/WorkSpace/other/blog/learner/index.html # 生成的index文件输出路径，默认 classpath:output/index.html
