调整博客布局

--- a/_config.yml
+++ b/_config.yml
@@ -86,3 +86,4 @@ paths:
   my_reader: /reader/index.html
   my_learner: /learner/index.html
   my_qq_zone: /QQ/zone/1460300366/index.html
+  my_github: https://github.com/petterobam
