--- a/_data/i18n.yml
+++ b/_data/i18n.yml
@@ -2,6 +2,7 @@ en: &en
   my_reader: 'ReadThinking'
   my_learner: 'LearningNote'
   my_qq_zone: 'QQ-ZONE'
+  my-github: 'Github'
   about: 'About'
   articles: 'Articles'
   back_to_top: 'Back to Top'
@@ -44,6 +45,7 @@ zh: &zh
   my_reader: '读书手札'
   my_learner: '学习笔记'
   my_qq_zone: 'QQ空间'
+  my-github: 'Github'
   about: '关于'
   articles: '文章列表'
   back_to_top: '返回顶部'
