adjust book post

--- a/_config.dev.yml
+++ b/_config.dev.yml
@@ -102,4 +102,4 @@ paths:
   my_qq_zone: /other/QQ/zone/1460300366/index.html
   my_github: https://github.com/petterobam
 
-exclude: ["vendor"]
+exclude: ["other","vendor"]
