adjust book post

--- a/_config.dev.yml
+++ b/_config.dev.yml
@@ -33,6 +33,10 @@ sass:
 collections:
   life_posts:
     output: true
+  letter_posts:
+    output: true
+  book_posts:
+    output: true
 
 # Site Data
 url: # the base hostname & protocol for your site, e.g. http://example.com
