--- a/_config.dev.yml
+++ b/_config.dev.yml
@@ -12,6 +12,7 @@ plugins:
   - jekyll-seo-tag
   - jekyll-sitemap
   - jekyll-gist
+  - jekyll-paginate
 
 gist:
   noscript: false
@@ -26,6 +27,9 @@ liquid:
   error_mode        : warn
   strict_filters    : false
   strict_variables  : false
+
+paginate: 5
+paginate_path: "/page:num"
 
 sass:
   style: compressed
