--- a/_data/i18n.yml
+++ b/_data/i18n.yml
@@ -1,9 +1,10 @@
 en: &en
   life_news: 'LifeNews'
-  my_reader: 'ReadThinking'
-  my_learner: 'LearningNote'
-  my_qq_zone: 'QQ-ZONE'
-  my_github: 'Github'
+  reader: 'ReadThinking'
+  letter: 'Letter'
+  learner: 'LearningNote'
+  qq_zone: 'QQ-ZONE'
+  github: 'Github'
   about: 'About'
   articles: 'Articles'
   back_to_top: 'Back to Top'
@@ -44,10 +45,11 @@ en-nz:
   <<: *en
 zh: &zh
   life_news: '生活动态'
-  my_reader: '读书手札'
-  my_learner: '学习笔记'
-  my_qq_zone: 'QQ空间'
-  my_github: 'Github'
+  reader: '读书手札'
+  letter: '信'
+  learner: '学习笔记'
+  qq_zone: 'QQ空间'
+  github: 'Github'
   about: '关于'
   articles: '文章列表'
   back_to_top: '返回顶部'
