--- a/_data/i18n.yml
+++ b/_data/i18n.yml
@@ -11,6 +11,7 @@ en: &en
   categories: 'Categories'
   close: 'Close'
   enter_blog: 'Enter Blog'
+  enter_github: 'Enter Github'
   last_updated: 'Last updated'
   menu: 'Menu'
   more: 'More'
@@ -56,6 +57,7 @@ zh: &zh
   categories: '文章分类'
   close: '关闭'
   enter_blog: '进入博客'
+  enter_github: '访问Github'
   last_updated: '最后更新于'
   menu: '菜单'
   more: '更多'
