--- a/_config.yml
+++ b/_config.yml
@@ -95,9 +95,9 @@ author:
     - name: vk
       url:
 home:
-  section1: <h1>petter&nbsp;obam</h1>
-  section2: <h2>一段代码，一个故事</h2>
-  section3: <div class="social-links"><a class="ico-github btn" href="https://github.com/petterobam" title="查看 GitHub"></a></div>
+  section1: <h1>欧阳Boy_Petter</h1>
+  section2: <h2>一段文字，一个故事</h2>
+  section3: <h2>一段代码，一个故事</h2>
 blog:
   cc_license: http://creativecommons.org/licenses/by-sa/4.0/ # CC License.
   cc_license_image: /assets/images/theme/cc-by-sa.png # CC License.
