--- a/_data/i18n.yml
+++ b/_data/i18n.yml
@@ -2,6 +2,8 @@ en: &en
   life_news: 'LifeNews'
   reader: 'Reading'
   letter: 'Letter'
+  song: 'Song'
+  gist: 'Gist'
   learner: 'Note'
   qq_zone: 'QQ-ZONE'
   github: 'Github'
@@ -48,8 +50,10 @@ zh: &zh
   life_news: '动态'
   reader: '读书'
   letter: '信'
+  song: '歌'
+  gist: 'Gist'
   learner: '笔记'
-  qq_zone: 'QQ-ZONE'
+  qq_zone: 'QQ'
   github: 'Github'
   about: '关于'
   articles: '文章'
