add life news and adjust load by scroll

--- a/_config.dev.yml
+++ b/_config.dev.yml
@@ -29,7 +29,7 @@ liquid:
   strict_variables  : false
 
 paginate: 5
-paginate_path: "/page:num"
+paginate_path: "/home/page:num"
 
 sass:
   style: compressed
