add board and book status

--- a/_config.dev.yml
+++ b/_config.dev.yml
@@ -145,6 +145,7 @@ paths:
   reader: /reader/
   letter: /letter/
   learner: /learner/
+  board: /board/
   qq_zone: /other/QQ/
   github: https://github.com/petterobam
 
