--- a/_data/i18n.yml
+++ b/_data/i18n.yml
@@ -4,6 +4,7 @@ en: &en
   letter: 'Letter'
   song: 'Song'
   gist: 'Gist'
+  board: 'Board'
   learner: 'Note'
   qq_zone: 'QQ-ZONE'
   github: 'Github'
@@ -52,6 +53,7 @@ zh: &zh
   letter: '信'
   song: '歌'
   gist: 'Gist'
+  board: '看板'
   learner: '笔记'
   qq_zone: 'QQ'
   github: 'Github'
