--- a/_data/i18n.yml
+++ b/_data/i18n.yml
@@ -9,6 +9,8 @@ en: &en
   qq_zone: 'QQ-ZONE'
   github: 'Github'
   about: 'About'
+  family: 'Family'
+  other: 'Other'
   articles: 'Articles'
   back_to_top: 'Back to Top'
   categories: 'Categories'
@@ -58,6 +60,8 @@ zh: &zh
   qq_zone: 'QQ'
   github: 'Github'
   about: '关于'
+  family: '家'
+  other: '其他'
   articles: '文章'
   back_to_top: '返回顶部'
   categories: '分类'
