--- a/_data/i18n.yml
+++ b/_data/i18n.yml
@@ -7,6 +7,7 @@ en: &en
   board: 'Board'
   learner: 'Note'
   qq_zone: 'QQ-ZONE'
+  pwgen: 'Password-Generator'
   github: 'Github'
   about: 'About'
   family: 'Family'
@@ -58,6 +59,7 @@ zh: &zh
   board: '看板'
   learner: '笔记'
   qq_zone: 'QQ'
+  pwgen: '密码生成器'
   github: 'Github'
   about: '关于'
   family: '家'
