--- a/_data/i18n.yml
+++ b/_data/i18n.yml
@@ -8,6 +8,7 @@ en: &en
   learner: 'Note'
   qq_zone: 'QQ-ZONE'
   pwgen: 'Password-Generator'
+  gitemoji: 'Git Emoji'
   github: 'Github'
   about: 'About'
   family: 'Family'
@@ -60,6 +61,7 @@ zh: &zh
   learner: '笔记'
   qq_zone: 'QQ'
   pwgen: '密码生成器'
+  gitemoji: 'Git Emoji'
   github: 'Github'
   about: '关于'
   family: '家'
